Removed unnecessary logs. Added a response object when creating an organization.
